# how-to-start-a-CM

./: .bandit.yaml  .pre-commit-config.yaml  README.md  pyproject.toml  slides.py
changes/: 00_calculation_module.py  00_constant.py  00_tests.py  00_transactions.py
